# chalkline

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: chalkline.css  main.py
app/assets/: logo.b64
app/info/: career_paths.md  resume_match.md  skill_alignment.md
data/: README.md
data/certifications/: careeronestop.json
data/certifications/raw/: careeronestop.xlsx
data/labor/: outlook.json  projections.json  wages.json
data/lexicons/: apprenticeships.json  certifications.json  credentials.json  labor.json  onet.json  osha.json  programs.json  supplement.json
data/postings/: corpus.json
data/stakeholder/additions/: apprenticeship_socs.toml  onet_codes.json  program_socs.toml
data/stakeholder/reference/: agc_members.json  apprenticeships.json  career_urls.json  cc_programs.json  dot_contractors.json  job_boards.json  onet_codes.json  umaine_programs.json
paper/: README.md
scripts/: curate_apprenticeships.py  curate_certifications.py  curate_credentials.py  curate_labor.py  curate_onet.py  curate_osha.py  curate_programs.py  curate_supplement.py  explore_embeddings.py  parse_agc_workbook.py  parse_certifications.py  parse_labor.py
scripts/report/: association.py  clustering.py  evaluation.py
src/chalkline/: __init__.py  __main__.py
src/chalkline/association/: __init__.py  apriori.py  cooccurrence.py  schemas.py
src/chalkline/cli/: __init__.py  cache.py  fit.py  launch.py
src/chalkline/clustering/: __init__.py  comparison.py  hierarchical.py  schemas.py
src/chalkline/collection/: __init__.py  collector.py  manifest.py  models.py  schemas.py  stats.py  storage.py
src/chalkline/display/: cards.py  charts.py  figures.py  forms.py  layout.py  loaders.py  routes.py  schemas.py  tables.py  theme.py
src/chalkline/extraction/: __init__.py  lexicons.py  loaders.py  occupations.py  schemas.py  skills.py  vectorize.py
src/chalkline/matching/: matcher.py  reader.py  schemas.py
src/chalkline/parsing/: __init__.py  extract.py
src/chalkline/pathways/: __init__.py  clusters.py  graph.py  loaders.py  routing.py  schemas.py  scoring.py  selection.py
src/chalkline/pipeline/: __init__.py  encoder.py  enrichment.py  graph.py  orchestrator.py  programs.py  progress.py  schemas.py  steps.py  trades.py
src/chalkline/reduction/: __init__.py  pca.py  schemas.py
src/chalkline/report/: boards.py  credentials.py  dag.py  text.py  (+2 more)
tests/: __init__.py  conftest.py
tests/association/: test_apriori.py  test_cooccurrence.py  test_schemas.py
tests/clustering/: __init__.py  test_comparison.py  test_hierarchical.py  test_schemas.py
tests/collection/: __init__.py  test_collection.py  test_collector.py  test_manifest.py  test_models.py  test_schemas.py  test_storage.py
tests/display/: test_cards.py  test_figures.py  test_layout.py  test_map.py  test_routes.py  test_schemas.py  test_tables.py
tests/extraction/: __init__.py  test_lexicons.py  test_loaders.py  test_occupations.py  test_reader.py  test_schemas.py  test_skills.py  test_vectorize.py
tests/matching/: test_matcher.py  test_reader.py
tests/parsing/: __init__.py  test_extract.py
tests/pathways/: test_clusters.py  test_graph.py  test_loaders.py  test_routing.py  test_schemas.py  test_scoring.py  test_selection.py
tests/pipeline/: __init__.py  test_enrichment.py  test_graph.py  test_orchestrator.py  test_programs.py  test_schemas.py  test_steps.py  test_trades.py
tests/reduction/: test_pca.py  test_schemas.py
tests/report/: test_boards.py  test_credentials.py  test_dag.py  test_employers.py
(+47 files in other folders)
